# Composer

./: LICENSE
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: AVpacket_queue.cpp  AVpacket_queue.h  CMakeLists.txt  Utils.cpp  Utils.h  native-lib.cpp
android/app/src/main/java/com/viso/composer/: App.kt  InputDialog.kt  MainActivity.kt  MediaCodecActivity.kt  MediaCodecPlayer.kt  ViewExt.kt
android/app/src/main/res/drawable/: shape_input_bg.xml
android/app/src/main/res/layout/: activity_main.xml  dialog_input.xml
android/gradle/wrapper/: gradle-wrapper.properties
ios/OpenGLESDemo/: Podfile
ios/OpenGLESDemo/OpenGLESDemo/: AppDelegate.h  AppDelegate.m  FrameBufferObjc.h  FrameBufferObjc.m  OpenGLHelper.h  OpenGLHelper.m  ShaderTool.h  ShaderTool.m  TextureObjc.h  TextureObjc.m  ViewController.h  ViewController.m  main.m
ios/OpenGLESDemo/OpenGLESDemo.xcodeproj/: project.pbxproj
ios/OpenGLESDemo/OpenGLESDemo/Base.lproj/: Main.storyboard
ios/OpenGLESDemo/OpenGLESDemo/resource/: kunkun_nv12_690x1036.yuv  nv12_512x512.yuv
ios/OpenGLESDemo/OpenGLESDemo/yuv图片/: OpenGLView04.h  OpenGLView04.m  OpenGLViewController04.h  OpenGLViewController04.m  YUVBufferData.h  YUVBufferData.m
ios/OpenGLESDemo/OpenGLESDemo/三角形/: OpenGLView01.h  OpenGLView01.m  OpenGLViewController01.h  OpenGLViewController01.m
ios/OpenGLESDemo/OpenGLESDemo/图片/: OpenGLView02.h  OpenGLView02.m  OpenGLViewViewController02.h  OpenGLViewViewController02.m
ios/OpenGLESDemo/OpenGLESDemo/多个纹理/: OpenGLView03.h  OpenGLView03.m  OpenGLViewViewController03.h  OpenGLViewViewController03.m
